[tool.poetry]
name = "xapi"
version = "0.1.0"
description = ""
authors = ["Mike Zimin <mikeziminio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
uvicorn = "0.23.0"
starlette = "0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
